# gintonic

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.cmake  Doxyfile.css  FindFBX.cmake  FindSDL2.cmake  Findassimp.cmake  README.md  bootstrap-linux.sh  bootstrap.py  bootstrap.sh  doxypress.json  gintonic.sublime-project  shader_generator.py  shadows.cpp
Examples/: Application.cpp  Application.hpp  BasicShapes.cpp  CMakeLists.txt  Console.cpp  DirectionalLight.cpp  FbxViewer.cpp  HelloWorldText.cpp  Octree.cpp  OrthographicProjection.cpp  PointLights.cpp  Shadows.cpp  SpotLights.cpp  StreamBuffers.cpp  TexturedCube.cpp  directional_light.cpp  fbx_viewer.cpp  point_lights.cpp  rotating_square.cpp  skybox.cpp  spot_lights.cpp  text.cpp
Examples/Common/: Application.cpp  Application.hpp
Resources/: CMakeLists.txt
Resources/JetLowPoly/: Jet_NoAnimation.FBX
Resources/images/: siege_lf_flipped.tga
UnitTest/: CMakeLists.txt  Entity.cpp  OctreeTest.cpp  Reflection.cpp  SerializationOfLights.cpp  SimdTest.cpp  box2f.cpp  box3f.cpp  mat2f.cpp  mat4f.cpp  materials.cpp  quatf.cpp  vec3f.cpp  vec4f.cpp
assets/: CMakeLists.txt
assets/fbx/: cube.fbx
assets/images/: siege_bk_flipped.tga  siege_ft_flipped.tga
examples/: BasicShapes.cpp  CMakeLists.txt  Console.cpp  DirectionalLight.cpp  FbxViewer.cpp  HelloWorldText.cpp  Octree.cpp  OrthographicProjection.cpp  PointLights.cpp  Shadows.cpp  SpotLights.cpp  TexturedCube.cpp  basic_shapes.cpp  directional_light.cpp  driver_info.cpp  fbx_importer.cpp  fbx_viewer.cpp  fps_camera.cpp  geometry_buffer_showcase.cpp  hello_world.cpp  main.cpp  normal_map_test.cpp  point_lights.cpp  quadtree_console.cpp  rotating_square.cpp  serialize_materials.cpp  skybox.cpp  spot_lights.cpp  square.cpp  text.cpp  textured_cube.cpp  textured_cube_with_mod_color.cpp
include/: Application.hpp  ApplicationStateMachine.hpp  Asset.hpp  Behaviour.hpp  BoxCollider.hpp  CMakeLists.txt  Camera.hpp  Casting.hpp  CmakeLists.txt  Collider.hpp  Component.hpp  Entity.hpp  EntityBase.hpp  EntityVisitor.hpp  FbxImporter.hpp  ForwardDeclarations.hpp  GraphicsContext.hpp  Image.hpp  IntrusivePtr.hpp  MeshRenderer.hpp  OctreeComp.hpp  Prefab.hpp  QuitApplication.hpp  RenderContext.hpp  RenderStrategy.hpp  Renderer.hpp  RunLoop.hpp  SDLRenderContext.hpp  SDLRunLoop.hpp  SDLWindow.hpp  Scene.hpp  Signal.hpp  State.hpp  StateEvent.hpp  Texture2D.hpp  Transform.hpp  Window.hpp  actors.hpp  exception.hpp  fonts.hpp  (+11 more)
include/Foundation/: Clock.hpp  Console.hpp  Object.hpp  Octree.hpp  WriteLock.hpp  allocator.hpp  exception.hpp  filesystem.hpp  scancodes.hpp  simd.hpp  tuple.hpp  utilities.hpp
include/Graphics/: AmbientLight.hpp  AnimationClip.hpp  DirectionalLight.hpp  DirectionalShadowBuffer.hpp  Font.hpp  GeometryBuffer.hpp  Light.hpp  Material.hpp  Mesh.hpp  PointLight.hpp  PointShadowBuffer.hpp  Renderer.hpp  ShaderPrograms.hpp  ShadowBuffer.hpp  Skeleton.hpp  SpotLight.hpp  SpotShadowBuffer.hpp  Texture2D.hpp  skybox.hpp
include/Math/: Interpolator.hpp  MatrixPipeline.hpp  SQT.hpp  SQTstack.hpp  box2f.hpp  box3f.hpp  mat2f.hpp  mat3f.hpp  mat4f.hpp  mat4fstack.hpp  quatf.hpp  vec2f.hpp  vec3f.hpp  vec4f.hpp
include/cmake/: Doxyfile.cmake
include/gintonic/: Asset.hpp  Camera.hpp  Component.hpp  Entity.hpp  EntityVisitor.hpp  FbxImporter.hpp  ForwardDeclarations.hpp  Scene.hpp  namespace.hpp  nsbegin.hpp  nsend.hpp
lib/: Application.cpp  ApplicationStateMachine.cpp  Asset.cpp  Behaviour.cpp  BoxCollider.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Collider.cpp  Component.cpp  DirectionalShadowBuffer.cpp  DirectionalShadowBuffer.hpp  Doxyfile.cmake  Entity.cpp  Entity.hpp  EntityBase.cpp  EntityVisitor.cpp  FbxImporter.cpp  FbxImporter.hpp  GraphicsContext.cpp  Image.cpp  MatrixPipeline.hpp  MeshRenderer.cpp  Object.hpp  OctreeComp.cpp  PointShadowBuffer.cpp  PointShadowBuffer.hpp  Precompiled.hpp  Prefab.cpp  README.md  RenderStrategy.cpp  Renderer.cpp  RunLoop.cpp  SDLRenderContext.cpp  SDLRunLoop.cpp  SDLWindow.cpp  SQT.cpp  SQT.hpp  SQTstack.hpp  Scene.cpp  (+95 more)
lib/Component/: Behaviour.cpp  BoxCollider.cpp  Collider.cpp  MeshRenderer.cpp  Renderer.cpp  Transform.cpp
lib/Foundation/: Clock.cpp  Console.cpp  Object.hpp  Octree.cpp  Profiler.cpp  ReadWriteLock.cpp  WriteLock.cpp  allocator.hpp  exception.cpp  exception.hpp  filesystem.cpp  getExecutablePath.cpp  octree.hpp  profiler.cpp  simd.cpp  tuple.hpp
lib/Graphics/: AmbientLight.cpp  AmbientLight.hpp  AnimationClip.cpp  DirectionalLight.cpp  DirectionalLight.hpp  DirectionalShadowBuffer.cpp  DirectionalShadowBuffer.hpp  Font.cpp  Font.hpp  GeometryBuffer.cpp  GraphicsContext.cpp  Light.cpp  Light.hpp  Material.cpp  Mesh.cpp  Mesh.hpp  PointLight.cpp  PointLight.hpp  PointShadowBuffer.cpp  PointShadowBuffer.hpp  Renderer.cpp  ShaderPrograms.cpp  ShadowBuffer.hpp  Skeleton.cpp  SpotLight.cpp  SpotShadowBuffer.cpp  SpotShadowBuffer.hpp  Texture2D.cpp  Texture2D.hpp  basic_shapes.cpp  fonts.cpp  fonts.hpp  lights.cpp  lights.hpp  materials.cpp  materials.hpp  mesh.cpp  mesh.hpp  proj_info.cpp  proj_info.hpp  (+8 more)
lib/Math/: SQT.cpp  box2f.cpp  box3f.cpp  box3f.hpp  mat2f.cpp  mat2f.hpp  mat3f.cpp  mat4f.cpp  mat4f.hpp  quatf.cpp  quatf.hpp  vec2f.cpp  vec3f.cpp  vec3f.hpp  vec4f.cpp  vec4f.hpp
lib/cmake/: FindSDL2.cmake  config.cmake
lib/opengl/: buffer_object.cpp  buffer_object.hpp  buffer_object_array.hpp  framebuffer.cpp  framebuffer.hpp  generic_shader_program.cpp  generic_shader_program.hpp  shader.hpp  shader_program.cpp  shader_program.hpp  (+12 more)
test/: AssetsTest.cpp  CMakeLists.txt  Casting.cpp  Clock.cpp  Entity.cpp  OctreeTest.cpp  Reflection.cpp  SDLRenderContext.cpp  SQT.cpp  SerializationOfLights.cpp  SimdTest.cpp  box2f.cpp  box3f.cpp  filesystem.cpp  mat2f.cpp  mat3f.cpp  mat4f.cpp  materials.cpp  math.cpp  quatf.cpp  test_materials.cpp  vec2.cpp  vec2f.cpp  vec3f.cpp  vec4f.cpp
tools/: CMakeLists.txt  ConsoleTest.cpp  FbxConverter.cpp  LuaTest.cpp  driver_info.cpp  fbx_converter.cpp  glslparser.cpp  luatest.cpp
ubuntu/: CMakeLists.txt  config.hpp.in
windows/: CMakeLists.txt  config.hpp.in
(+506 files in other folders)
